# wally

./: .gitignore  .gitmodules  Dockerfile  Gopkg.toml  LICENCE.md  README.md  build.linux.sh  build.osx.sh  build.win.bat  dfu.go  go.mod  go.sum  install.linux.sh  main.go  project.json  state.go  teensy.go  ui.go  ui_dev.go  ui_dist.go  usb.go  version.go  wails.json
.github/workflows/: build.yml
cli/: main.go
cmd/: README.md  app.go  flash.go  root.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  pnpm-lock.yaml
frontend/src/: App.svelte  index.js  main.ts
frontend/src/components/: About.svelte  App.js  BrowserLink.svelte  Console.js  Console.svelte  DeviceProbe.js  DeviceReset.js  DeviceSelect.js  FirmwareFlash.js  FirmwareSelect.js  FlashComplete.js  Footer.js  Header.svelte  Pills.svelte  ProgressBar.svelte  StatusBar.svelte  Steps.svelte
frontend/src/css/: global.css  inter.css  lato.css  wally.css
frontend/src/lib/: state.ts  utils.ts
hooks/: post_darwin_universal.sh  pre_darwin_universal.sh
state/: config.go  event.go  logs.go  state.go  update.go  version.go
ui/: .babelrc  .eslintrc  .prettierrc  package.json  webpack.config.js
ui/src/: index.html  index.js
ui/src/css/: wally.css
usb/: .gitignore  CMakeLists.txt  callback.go  compile_commands.json  device.cpp  device.go  device.hpp  dfu.go  enumerator.cpp  enumerator.hpp  flash.go  halfkay.go  usb.go  usb.i  usb_wrap.cxx  usb_wrap.h  xmake.lua
wally/: dfu.go  ergoboot.go  ergoboot.h  ergoboot_darwin.c  ergoboot_linux.go  state.go  teensy.go  usb.go  version.go
(+22 files in other folders)
